# Memtrade

./: .gitignore
apps/: README.md
apps/scripts/: parse_ftrace.py  pic.patch
balloon/: CMakeLists.txt  README.md  balloon.cpp  balloon.h  curses.cpp  handlers.cpp
cluster_trace/: Untitled.ipynb  analyse_trace.py  consumer-producer.py  cpu_mem.csv  get_google_cluster_trace.py  prediction.csv  scheduler_simulator.py
cluster_trace/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
control_loop/: CMakeLists.txt  avl_tree.h  config.h  config.yaml  main.cpp
framework/infiniswap_daemon/: Makefile  central-coordinator.c  coordinator.c  producer.c  rcommon.c  rcommon.h  rdma-common.c  rdma-common.h  utils.h
harvester/: README.md  build.sh  out.txt
harvester/balloon/: CMakeLists.txt  balloon.cpp
harvester/cmanager/: CMakeLists.txt  cmanager.cpp
harvester/cmanager_latency/: cmanager.cpp
harvester/producer-cli/: Makefile  producer-cli.c  producer-cli.h  producer.c
harvester/rcmanager/: CMakeLists.txt  rcmanager.cpp
harvester/server/: Makefile  broker.c  configure.sh  consumer.c  producer.c  producer.h
harvester/tswap/: Makefile  main.c
idle_page_tracking/: cachestat.sh  pageidle_sampled.c  wss.c
idle_page_tracking/data/: cache_stat_bulkload.txt  cache_stat_bulkload_0.txt  cache_stat_readwhilewriting.txt  cache_track.xlsx  (+3 more)
logs/: breakdown.txt  cdf.txt
raw_control_loop/: CMakeLists.txt  config.h  config.yaml  install_yaml_cpp.sh  main.cpp
working_set/: Makefile  README.md  cachestat.sh  cmd.h  cold_page_detector.cpp  eatup.c  mem_harvest.c  wss.c
(+24 files in other folders)
